review comment from psandoz